<resources>
    <string name="app_name">Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">ºC</string>
    <string name="humid">%</string>
    <string name="dust">㎍/m³</string>
    <string name="blank">\t\t\t</string>
    <string name="click_setting">클릭해서 설정하기</string>
    <string name="find_location_map">\t지도로 위치 찾기</string>
    <string name="does_not_exist_picture">does not exist picture</string>
    <string name="search_current_location">현재 위치를 탐색 중입니다.</string>
</resources>
